--- a/src/app/result-list-item/styles/_cloud.scss
+++ b/src/app/result-list-item/styles/_cloud.scss
@@ -10,6 +10,7 @@
     opacity: 0;
     pointer-events: none;
     transition: all 0.6s;
+    top: 0;
   }
 
   &-img {
@@ -26,12 +27,12 @@
   &-two {
     opacity: 0;
     &.active {
-      opacity: 1;
-      visibility: hidden;
-      animation: disappear-after;
+      opacity: 0;
+      animation: reveal;
       animation-duration: 1s;
       path.arrow {
-        animation: arrow-down-cloud 1s 1;
+        animation: arrow-down-cloud 1s;
+        animation-iteration-count: 1;
         transform-origin: 50% 50%;
       }
     }
@@ -43,7 +44,9 @@
     &.active {
       opacity: 1;
       .check-mark {
-        animation: check-mark-scale 1s 1;
+        animation: check-mark-scale 1s;
+        animation-iteration-count: 1;
+
         animation-delay: 1s;
       }
     }
@@ -70,7 +73,7 @@
     right: 0;
     transition: all 0.32s;
     &.active {
-      top: 0;
+      transform: translateY(27px);
     }
   }
 }
