--- a/src/app/result-list-item/result-list-item.component.html
+++ b/src/app/result-list-item/result-list-item.component.html
@@ -6,7 +6,8 @@
   <div class="overlay" [class.active]="isActive"></div>
 
   <div class="cloud-container">
-    <!-- Step 1: Cloud with dropping arrow -->
+    <!-- Step 1: Cloud with arrow - static icon -->
+
     <svg-icon
       class="cloud-one cloud-img"
       src="../../assets/cloud-arrow-icon.svg"
